--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,6 +42,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptatibus debitis praesentium inventore, eum deserunt.
       </p>
     <a href="/profile"  class="btn"> My Profile </a>
+    <a href="/machine_profile" class="btn">My Machines</a>
  
     </div>
   </header>
