--- a/views/pages/fitness/new.ejs
+++ b/views/pages/fitness/new.ejs
@@ -20,18 +20,21 @@
             <!-- <br> -->
     <!-- Select one of Machine Please -->
     <br>
-    bench<input type="radio" name="muscle" class="radio-input" value="bench" required>
-    <!-- <label for="" class="machine-input">bench</label>        -->
- 
-    dumbbells <input type="radio" name="muscle"  class="radio-input" value="dumbbell" required>
-    <!-- <label for="" class="machine-input">dumbbells</label>    -->
-
-    smith machine<input type="radio" name="muscle"class="radio-input" value="smith" required>
-    <!-- <label for="" class="machine-input">smith machine</label>     -->
-    barbell <input type="radio" name="muscle" class="radio-input" value="barbell" required>
-    <!-- <label for="" class="machine-input">barbell</label>    -->
-    pull machines<input type="radio" name="muscle" class="radio-input" value="pull" required>
-    <!-- <label for="" class="machine-input">pull machines</label>   -->
+    <label for="" class="machine-input">    
+    <input type="radio" name="muscle" class="radio-input" value="bench" required><span> bench </span>
+</label> 
+<label for="" class="machine-input">
+    <input type="radio" name="muscle"  class="radio-input" value="dumbbell" required> <span>dumbbells</span> 
+</label> 
+<label for="" class="machine-input">
+  <input type="radio" name="muscle"class="radio-input" value="smith" required><span>smith machine </span>
+</label> 
+<label for="" class="machine-input"> 
+     <input type="radio" name="muscle" class="radio-input" value="barbell" required><span>barbell</span>
+    </label>   
+    <label for="" class="machine-input">
+    <input type="radio" name="muscle" class="radio-input" value="pull" required> <span>pull machines</span>
+</label> 
     <button type="submit" class="button"> Submit </button>
 </fieldset>
     </form>
