added update and delete

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <title>Triple A.M</title>
+    <link rel="stylesheet" href="/public/styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="/public/styles/header.css">
 </head>
+
 <body>
-    <h1>main page</h1>
-    <a href="/newMeal"> Get Meal Plan :) </a>
-    <a href="/newExc"> Get excercise </a>
-    <a href="/profile"> My Profile </a>
+
+    <header>
+    <nav class="menu-opener">
+        <div class="menu-opener-inner"></div>
+    </nav>
+    <nav class="menu">
+        <ul class="menu-inner">
+            <a href="/" class="menu-link">
+                <li>Home</li>
+            </a>
+            <a href="/profile" class="menu-link">
+                <li>My Profile</li>
+            </a>
+            <a href="/newMeal" class="menu-link">
+                <li>Nutrition Plan</li>
+            </a>
+            <a href="/newExc" class="menu-link">
+                <li>Workout Tools</li>
+            </a>
+            <a href="/machine_profile" class="menu-link">
+                <li>My Machines</li>
+            </a>
+        </ul>
+    </nav>
+</header>
+
+<main>
+<!-- <div id="logo">
+    <img src="https://i.ibb.co/tD0G66D/321.png" alt="" srcset="">
+</div> -->
+
+
+
+<section id="w1">
+
+    <div id="contain" > 
+        <section class="first" id="sec1" > 
+            <h1> The Sky Is The Limit </h1>
+            <p>Look up at the stars and not down at your feet . <br> Try to make sense of what you see, and wonder about what makes the universe exist. <br> Be curious.</p>
+        </section>
+        <section class="first" id="sec2" > </section>
+        <!-- <section class="first" id="sec3" > </section> --> 
+    </div>
+</section>
+
+<section id="w2">
+
+</section>
+
+
+</main>
+
+
 
 </body>
+
+
+
+
+
+
+<script src="/public/js/app.js"></script>
+
 </html>
