--- a/public/styles/form.css
+++ b/public/styles/form.css
@@ -41,7 +41,7 @@ html{
 }
 .foodForm ,.calc-form{
     padding: 3%;
-    margin: 2%;
+    margin: 50px auto;
  color: white;
     background-color: #222225;
     box-shadow: 0px 0px 80px 0px rgba(0,0,0,.1);
@@ -57,8 +57,8 @@ html{
 /* .foodForm button , .calc-form button ,.exercise-button{
     font-family: 'Roboto', sans-serif;
     color: #FFFFFF;
-    background: rgb(197, 24, 24);
-    border-color: rgb(197, 24, 24);
+    background: rgb(68, 0, 0);
+    border-color: rgb(68, 0, 0);
     border-radius: 30px;
     font-size: 86%;
     width: 40%;
@@ -117,7 +117,7 @@ label{
         font-family: 'Roboto', sans-serif;
         color: #FFFFFF;
         background: rgb(34, 34, 37);
-        border-color: rgb(197, 24, 24);
+        border-color: rgb(68, 0, 0);
         /* border-radius: 30px; */
         font-size: 18px;
         width: 80%;
@@ -157,12 +157,12 @@ label{
     /* display: none;  */
 }
 .button {
-    background-color: rgb(197, 24, 24);
+    background-color: rgb(68, 0, 0);
     border: none;
     font-family: 'Roboto', sans-serif;
     color: #FFFFFF;
-    background: rgb(197, 24, 24);
-    /* border-color: rgb(197, 24, 24); */
+    background: rgb(68, 0, 0);
+    /* border-color: rgb(68, 0, 0); */
     border-radius: 30px;
     font-size: 80%;
     width: 50%;
@@ -187,17 +187,17 @@ label{
     width: 24px;
   }
   .button:before {
-    border-top: 2px solid rgb(197, 24, 24);
+    border-top: 2px solid rgb(68, 0, 0);
     left: 0px;
     top: -5px;
   }
   .button:after {
-    border-bottom: 2px solid rgb(197, 24, 24);
+    border-bottom: 2px solid rgb(68, 0, 0);
     bottom: -5px;
     right: 0px;
   }
   .button:hover {
-    background-color: rgb(197, 24, 24);
+    background-color: rgb(68, 0, 0);
   }
   .button:hover:before,
   .button:hover:after {
