--- a/public/styles/myProfile.css
+++ b/public/styles/myProfile.css
@@ -13,7 +13,7 @@
     }
     .food-result-list{
         width: 100%;
-        height: 30pc;
+        height: 22pc;
     }
     .exercise-Section{
         float: left;
@@ -30,7 +30,7 @@ html{
     font-size: 20px;
     width: 75%;
     background-color: #222225;
-    border:rgb(197, 24, 24) solid ;
+    border:rgb(68, 0, 0); solid ;
     margin: 3% 3% 3% 10%;
     text-align: center;
     line-height: 2pc;
@@ -55,8 +55,11 @@ html{
     font-size: 120%;
     width: 75%;
     background-color: #222225;
-    border:rgb(197, 24, 24) solid ;
+    box-shadow: 0 0px 8px #250404;
     margin:1%  3% 1% 10%;
+    padding: 26px 10px;
+    font-size: 17px;
+    line-height: 1.5;
 }
 #resultImage{
     width: 60%;
@@ -77,7 +80,7 @@ html{
     width: 40%;
     /* grid-column: 2;
     grid-row: 1; */
-    background-color: #222225;
+    background-color: #313131;
     font-family: 'Roboto', sans-serif;
     list-style-type: none;
     text-align: center;
@@ -97,8 +100,8 @@ html{
 .update-button ,.delete-button ,.button-click{
     font-family: 'Roboto', sans-serif;
     color: #FFFFFF;
-    background: rgb(197, 24, 24);
-    border-color: rgb(197, 24, 24);
+    background: rgb(68, 0, 0);
+    border-color: rgb(68, 0, 0);
     border-radius: 30px;
     font-size: 80%;
     width: 50%;
@@ -111,15 +114,18 @@ html{
 .food-result-h{
     font-size: 95%;
     font-family: 'Roboto', sans-serif;
+}
+.exercise-Section .button{
+    margin-left: 0;
 } 
 
 .button {
-    background-color: rgb(197, 24, 24);
+    background-color: rgb(68, 0, 0);
     border: none;
     font-family: 'Roboto', sans-serif;
     color: #FFFFFF;
-    background: rgb(197, 24, 24);
-    /* border-color: rgb(197, 24, 24); */
+    background: rgb(68, 0, 0);
+    border-color: rgb(68, 0, 0);
     border-radius: 30px;
     font-size: 80%;
     width: 50%;
@@ -130,8 +136,11 @@ html{
     margin-bottom: 3%;
     color: #FFFFFF;
     outline: none;
-    padding: 12px 40px 10px;
+    padding: 18px 40px 16px;
     position: relative;
+    cursor: pointer;
+    font-weight: 900;
+    letter-spacing: 1px;
   }
   .button:before,
   .button:after {
@@ -143,17 +152,17 @@ html{
     width: 24px;
   }
   .button:before {
-    border-top: 2px solid rgb(197, 24, 24);
+    border-top: 2px solid rgb(68, 0, 0);
     left: 0px;
     top: -5px;
   }
   .button:after {
-    border-bottom: 2px solid rgb(197, 24, 24);
+    border-bottom: 2px solid rgb(68, 0, 0);
     bottom: -5px;
     right: 0px;
   }
   .button:hover {
-    background-color: rgb(197, 24, 24);
+    background-color: rgb(68, 0, 0);
   }
   .button:hover:before,
   .button:hover:after {
