--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,221 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css?family=Gayathri&display=swap');
-html{
-    background-color: rgba(0, 0, 0, 0.774);
-} 
-@media (max-width: 768px) {
-  @media screen and (min-width: width 768px) and (max-width:1280px){
-    header{
-        width: 100%;
-        height: 4pc;
-        background-color: rgba(0, 0, 0, 0.877);
-    }
-    /* #tabs{
-        margin-left: 700px;
-    } */
-    /* .dropbtn {
-        background-color: rgba(20,20,20, 0.5);
-        color: #c7c405;
-        padding: 16px;
-        font-size: 16px;
-        border-width: 0.1px;
-        border-top: 1px;
-        border-bottom: 1px;
-        border-color: rgba(221, 236, 9, 0.63);
-        margin-right: 30px;
-        filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
-        cursor: pointer;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    
-      }
-      
-      /* The container <div> - needed to position the dropdown content */
-      /* .dropdown {
-        position: relative;
-        display: inline-block;
-      }
-    
-      
-      /* Dropdown Content (Hidden by Default) */
-     
-/* aymaaaaaaaaaaaaaaan */
-/* @media (max-width: 768px){
-    .container {
-        display: grid;
-        grid-template-columns: 1fr;
-        padding-right: 15px;
-        padding-left: 15px;
-    }
-}
- @media (min-width: 768px){
-
-.container {
-    width: 90%;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: auto;
-    padding-right: 15px;
-    padding-left: 15px;
- 
-}
-
-.column1{
-    grid-column: 1;
-   }
-   .column2{
-    grid-column: 2;
-    
-   }
- }
- .container {
-    width: 100%;
-    height: 100%;
-    padding-top: 100px;
-    padding-bottom: 100px;
-    background: #2e2e30;
-    text-align: center;
- } 
-.column1 , .column2 {
-    width: 85%;
-    min-height: 1px;
-    font-size: 20px;
-    padding: 4%;
-    
-}
-.column1:hover{
-    transform: scale(1.04);
-    /* background-color: black; */
-    /* transition: 860ms;
-} */
-/* .column2:hover{
-    transform: scale(1.04);
-    /* background-color: black; */
-    /* transition: 860ms;
-}
-.columnList{
-    list-style: none;
-}
-.text-center {
-    text-align: center;
-}
-.pricing-intro h1 {
-    font-size: 37px;
-    color: #FFF;
-    line-height: 1.4;
-}
-.pricing-intro p {
-    font-size: 18px;
-    padding: 2%;
-    color: #a1a1a1;
-    line-height: 1.4;
-    letter-spacing: 1px;
-    margin-top: 5%;
-    margin-bottom: 7%;
-}
-.columnType{
-    font-size: 18px;
-    font-weight: 600;
-    color: #7d7d7f;
-    margin-bottom: 30px;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Roboto', sans-serif;
-}
-.table-left, .table-right {
-    background-color: #222225;
-    border: transparent;
-    width: 96%;
-}
-.btn-action {
-    font-family: 'Roboto', sans-serif;
-    color: #FFFFFF;
-    background: rgb(197, 24, 24);
-    border-color: rgb(197, 24, 24);
-    border-radius: 30px;
-    font-size: 130%;
-    width: 40%;  
-    transition: 200ms;
-}
-.btn-action a {
-    color: white;
-    text-decoration: none;
-}
-.btn-action:hover{
-    transform: scale(1.06);
-    transition: 860ms; 
-}
-.pricing-section {
-    width: 100%;
-    height: 100%;
-    padding-top: 100px;
-    padding-bottom: 100px;
-    background: #2e2e30;
-}
-.pricing-details {
-    padding: 50px 50px 40px 50px;
-}
-.columnList li {
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    /* font-weight: 400; */
-    /* color: #7d7d7f;
-    line-height: 1.4;
-    margin-bottom: 3%;
-}
-span {
-    display: inline-block;
-    font-family: 'Roboto', sans-serif;
-    font-size: 48px;
-    /* font-weight: 700; */
-    /* color: #FFF;
-    margin-bottom: 8%; */
-/* }
- .table-left,  .table-right {
-    padding: 20px 20px 50px 20px;
-    margin: 0 auto;
-    margin-bottom: 30px;
-    background-color: #222225;
-    border: transparent;
-    width: 100%;
-} */
-/* aymaaaaaaaaaaaaaan */
-/* Footer end */
-/* .button {
-    background-color: rgb(197, 24, 24);
-    border: none;
-    color: #FFFFFF;
-    outline: none;
-    padding: 12px 40px 10px;
-    position: relative;
-  }
-  .button:before,
-  .button:after {
-    border: 0 solid transparent;
-    transition: all 0.25s;
-    content: '';
-    height: 24px;
-    position: absolute;
-    width: 24px;
-  }
-  .button:before {
-    border-top: 2px solid rgb(197, 24, 24);
-    left: 0px;
-    top: -5px;
-  }
-  .button:after {
-    border-bottom: 2px solid rgba(117, 115, 115, 0.404);
-    bottom: -5px;
-    right: 0px;
-  }
-  .button:hover {
-    background-color: rgb(197, 24, 24);
-  }
-  .button:hover:before,
-  .button:hover:after {
-    height: 100%;
-    width: 100%;
-  }  */
-
   @import url('https://fonts.googleapis.com/css?family=Roboto');
   @import url('https://fonts.googleapis.com/css?family=Bangers|Kalam|Luckiest+Guy|Shadows+Into+Light&display=swap');
   
@@ -361,7 +143,6 @@ span {
   #showcase {
     background: rgb(68, 0, 0) url('https://i.ibb.co/cDpwPp5/yesss.jpg') no-repeat center center/cover;
     height: 100vh;
-    opacity: 0.7;
     color: #fff;
   }
   
@@ -448,21 +229,21 @@ span {
     padding: 0.5rem;
   }
   .container1{
-    margin-left: 11%;
-    margin-bottom: 6%;
-    margin-top: 6%;
+    background: #fff;
+    margin: 0 auto;
+    padding: 50px 0;
+    display: block;
+    width: 100%;
+    text-align: center;
     
   
   }
   
   .column1{
-  
-    border: solid white;
-  
-    padding: 5% 6% 1% 5%;
+    padding:3% 6% 4% 5%;
     display:inline-block;
     margin: 0% 6% 6% 0%;
-    background-color: rgb(68, 0, 0);
+    background-color: rgb(24, 23, 23) ;
     color: #fff;
     transition: transform 1s;
     margin-left: 3%;
@@ -472,32 +253,27 @@ span {
     animation-name: example;
     animation-duration: 4s;
     border-radius: 60px;
-    box-shadow: 5px 10px #888888;
-  
+    box-shadow: 0 2px 13px #888888;  
   
   
     
     
   }
   .column2{
-    border: solid white;
-    margin-left: 3%;
-    
-  
-    padding: 5% 5% 1% 5%;
+    padding:3% 6% 4% 5%;
     display:inline-block;
-    background-color: rgb(68, 0, 0);
+    margin: 0% 6% 6% 0%;
+    background-color: rgb(24, 23, 23) ;
     color: #fff;
     transition: transform 1s;
-  
+    margin-left: 3%;
     line-height: 1.4;
     -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
     -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
     animation-name: example;
     animation-duration: 4s;
     border-radius: 60px;
-  
-    box-shadow: 5px 10px #888888;
+    box-shadow: 0 2px 13px #888888;  
   
   
   
@@ -522,26 +298,30 @@ span {
   }
   #fo{
     font-size: 50px;
-    margin-left: 30%;
-    text-shadow: 2px 2px #FF0000;
+    text-shadow: 2px 2px #928d8d;
+    color: #fff !important;
   
   }
+  ul.columnList {
+    text-align: left;
+    font-size: 15px;
+}
   #ex{
     font-size: 50px;
     margin-left: 9%;
-    text-shadow: 2px 2px #FF0000;
-  
+    font-size: 50px;
+    text-shadow: 2px 2px #928d8d;
+    color: #fff !important;  
   }
   li{
     padding: 3% 0% 3% 0%;
   }
-  .wow{
-   margin-left: 35%;
-  
+  .white-bg{
+    background-color: #fff;
   }
+
   .wow1{
-    margin: 3%;
-    margin-left: 15%;
+    margin-bottom: 3em;
   
   
   }
@@ -562,7 +342,6 @@ span {
     transition: 860ms;
   }
   .btn-action{
-    margin-left: 31%;
     margin-top: 5%;
   }
   
@@ -583,13 +362,71 @@ span {
   } */
   
   /* Standard syntax */
-  @keyframes example {
-    0%   {background-color: rgb(3, 33, 34);}
-    25%  {background-color: rgb(76, 195, 20);}
-    50%  {background-color: rgb(255, 94, 0);}
-    100% {background-color: red}
-    
+
+
+  .btn {
+    background-color: rgb(68, 0, 0);
+    border: none;
+    font-family: 'Roboto', sans-serif;
+    color: #FFFFFF;
+    background: rgb(68, 0, 0);
+    border-color: rgb(68, 0, 0);
+    border-radius: 30px;
+    font-size: 80%;
+    width: 50%;
+    padding: 15px 42px;
+    margin: 50%;
+    transition: 200ms;
+    margin-left: 25%;
+    margin-top: 1pc;
+    margin-bottom: 3%;
+    color: #FFFFFF;
+    outline: none;
+    padding: 18px 40px 16px;
+    position: relative;
+    cursor: pointer;
+    font-weight: 900;
+    letter-spacing: 1px;
   }
+  .btn:before,
+  .btn:after {
+    border: 0 solid transparent;
+    transition: all 0.25s;
+    content: '';
+    height: 24px;
+    position: absolute;
+    width: 24px;
+  }
+  .btn:before {
+    border-top: 2px solid rgb(68, 0, 0);
+    left: 0px;
+    top: -5px;
+  }
+  .btn:after {
+    border-bottom: 2px solid rgb(68, 0, 0);
+    bottom: -5px;
+    right: 0px;
+  }
+  .btn:hover {
+    background-color: rgb(68, 0, 0);
+  }
+  .btn:hover:before,
+  .btn:hover:after {
+    height: 100%;
+    width: 100%;
+  }  
+  .home-buttons{
+    display: grid;
+    width: 50%;
+    grid-template-columns: 50% 50%;
+  }
+  .home-buttons .btn{
+    width: 73%;
+  }
+  #what .items div h3, #what .items div p {
+    color: #fff;
+}
+
   
   
   
