--- a/views/pages/fitness/new.ejs
+++ b/views/pages/fitness/new.ejs
@@ -6,12 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>exercise form</title>
     <link rel="stylesheet" href="public/styles/form.css">
+    <link rel="stylesheet" href="public/styles/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="public/styles/mobile.css">
+    <link rel="stylesheet" media="screen and (min-width: 1100px)" href="public/styles/widescreen.css">
 </head>
-<body>
+<body class="white-bg">
 
 
-    <!-- <h2> excercise page</h2> -->
-    
+    <header>
+        <%- include('../../partials/header') %>
+
+    </header>
+
     <form action="/getExr" method="POST" class="exercise-form">
         <h2 class="exercise-header"> get exercise depend on machine available in your gym </h2>
         <h2 class="exercise-header"> Select one of Machine Please : </h2>
