--- a/views/pages/profile/mymachines.ejs
+++ b/views/pages/profile/mymachines.ejs
@@ -8,24 +8,21 @@
 </head>
 <body>
     <% table.forEach( (val) => { %>
-        <div class="exercise-Section">
-            <form action="/update/<%= val.id %>?_method=PUT" method="POST">
-                
-                    <li> machine name:  </li>
-                    <input type="text" name="mname" value="<%= val.machine%>">
-                    <br>
-                    <li> catagory:  </li>
-                    <input type="text" name="catagory" value="<%= val.catagory %>">
-                    <br>
-                    <img src="<%= val.url? val.url:'https://bitsofco.de/content/images/2018/12/broken-1.png' %>">
+        <form action="/update/<%= val.id %>?_method=PUT" method="POST">
+            <li> machine name:  </li>
+            <input type="text" name="mname" value="<%= val.machine%>">
+            <br>
+            <li> catagory:  </li>
+            <input type="text" name="catagory" value="<%= val.catagory %>">
+            <br>
+            <div></div>
+            <img src="<%= val.url? val.url:'https://bitsofco.de/content/images/2018/12/broken-1.png' %>">
 
-                    <button type="submit" > Update </button>
-                
-            </form>
-            <form action="/delete_mach/<%= val.id %>?_method=DELETE" method="POST"> 
-                <button type="submit"> Delete Machine</button>
-            </form>
-        </div>
+            <button type="submit" > Update </button>
+        </form>
+        <form action="/delete_mach/<%= val.id %>?_method=DELETE" method="POST"> 
+            <button class="button" type="submit"> Delete Machine</button>
+        </form>
 
     <% }) %>
 
