--- a/views/pages/profile/mystatus.ejs
+++ b/views/pages/profile/mystatus.ejs
@@ -7,11 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Profile </title>
     <link rel="stylesheet" href="public/styles/myProfile.css">
+    <link rel="stylesheet" href="public/styles/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="public/styles/mobile.css">
+    <link rel="stylesheet" media="screen and (min-width: 1100px)" href="public/styles/widescreen.css">
 </head>
 
 <body>
-    <button class="button" id="my-food">My Diet Food </button>
-    <button class="button" id="my-exercise">My Exercises</button>
+    <%- include('../../partials/header') %>
+
 
     <div class="my-profile">
 
@@ -39,11 +42,11 @@
                         <% jsonData.forEach( (meal) => { %>
                         <div class="food-Section">
                             <ul class="food-result-list">
+                                <img id="resultImage"
+                                    src="https://spoonacular.com/recipeImages/<%=meal.imageUrls[0] %>">
                                 <li>Meal Name: <%= meal.title %> </li>
                                 <li>Ready in minutes: <%= meal.readyInMinutes %> </li>
                                 <li>Serving: <%= meal.servings %> </li>
-                                <img id="resultImage"
-                                    src="https://spoonacular.com/recipeImages/<%=meal.imageUrls[0] %>">
                             </ul>
                         </div>
                         <% }) %>
