--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -10,12 +10,20 @@
 <link rel="stylesheet" href="../public/styles/layout.css">
 <link rel="stylesheet" href="../public/styles/modules.css">
 <link rel="stylesheet" href="public/styles/form.css">
+<link rel="stylesheet" href="public/styles/style.css">
+<link rel="stylesheet" media="screen and (max-width: 768px)" href="public/styles/mobile.css">
+<link rel="stylesheet" media="screen and (min-width: 1100px)" href="public/styles/widescreen.css">
 </head>
 
-<body>
+<body class="white-bg">
    
-<main>
 
+
+  <header>
+    <%- include('../../partials/header') %>
+
+</header>
+<main>
  <!------------------------------------------- cal form  --------------------------------->
 <div class="calc-outer-wrap">
     <div id="form-error" style="display:none;"></div>
