--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,16 +24,16 @@
   <div id="showcase">
     <div class="showcase-content">
       <h1 style="font-family: 'Kalam', cursive; color: blanchedalmond;
-      " class="l-heading wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">
+      " class="l-heading wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
         The Sky Is The Limit
       </h1>
       <p style="font-family: 'Kalam', cursive; color:white;
-      " class="lead  wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">
+      " class="lead  wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.9s">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptatibus debitis <br/> praesentium inventore, eum deserunt.
       </p>
-      <div class="home-buttons wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">
-        <a href="/profile"  class="btn" class="button"> My Profile </a>
-        <a href="/machine_profile" class="btn" class="button">My Machines</a>
+      <div class="home-buttons">
+        <a href="/profile"  class="btn wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.9s"> My Profile </a>
+        <a href="/machine_profile" class="btn wow fadeInUp" data-wow-duration="1.4s" data-wow-delay="1s">My Machines</a>
       </div>
 
  
@@ -45,28 +45,28 @@
 
     
     <div class="container">
-      <h2 class="m-heading text-center"><span class="text-primary" style="color: white;">What</span> We Do</h2>
+      <h2 class="m-heading text-center wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s" style="color: white;"><span class="text-primary" style="color: white;">What</span> We Do</h2>
       <div class="items">
         
         <div class="item">
           <i class="fas fa-university fa-2x" ></i>
           <div>
-            <h3>Health Care Company</h3>
-            <p>We offer you all the services that make you healthy and healthy</p>
+            <h3 class="wow fadeInUp" data-wow-duration=".3s" data-wow-delay="0.5s" >Health Care Company</h3>
+            <p class="wow fadeInUp "  data-wow-duration=".3s">We offer you all the services that make you healthy and healthy</p>
           </div>
         </div>
         <div class="item">
             <i class="fas fa-book-reader fa-2x"></i>
             <div>
-              <h3>Healthy Food</h3>
-              <p>Providing a diet program that suits your body specifications and the way you sleep</p>
+              <h3 class="wow fadeInUp "  data-wow-duration=".3s" >Healthy Food</h3>
+              <p class="wow fadeInUp "  data-wow-duration=".3s" >Providing a diet program that suits your body specifications and the way you sleep</p>
             </div>
         </div>
         <div class="item">
             <i class="fas fa-pencil-alt fa-2x"></i>
             <div>
-              <h3>Health information</h3>
-              <p>General information about health and how to live a good way</p>
+              <h3 class="wow fadeInUp "  data-wow-duration=".3s">Health information</h3>
+              <p class="wow fadeInUp "  data-wow-duration=".3s">General information about health and how to live a good way</p>
             </div>
         </div>
       </div>
@@ -74,13 +74,14 @@
   </section>
 
   <!-- Section: Who We Are -->
-  <section id="who">
+  <section  id="who" >
     
-    <div class="who-img"></div>
     
-    <div class="who-text bg-dark p-2">
+    <div class="who-img wow slideInLeft" data-wow-duration="1.3s" data-wow-delay="0.8s"></div>
+    
+    <div class="who-text bg-dark p-2  wow slideInRight" data-wow-duration="1.3s" data-wow-delay="0.8s">
       <h2 class="m-heading"><span class="text-primary">Who</span> We Are</h2>
-      <p>We are a team of 4 people serving you to become healthy and happy life. This is a major reason for you to have confidence in yourself.</p>
+      <p class="wow fadeInUp "  data-wow-duration=".3s">We are a team of 4 people serving you to become healthy and happy life. This is a major reason for you to have confidence in yourself.</p>
       <h3>Our Team</h3>
       <ul class="list">
         <li>ABD ALRAHMAN: CEO</li>
@@ -101,8 +102,8 @@
           <p class="wow1" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">Those who think they have not time for bodily exercise will sooner or later have to find time for illness.
              </p>
         </div>
-        <div class="column1">
-          <div class="table-left " data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
+        <div class="column1 wow rollIn" data-wow-duration="1.3s" data-wow-delay="0.8s">
+          <div class="table-left">
             <div class="pricing-details">
               <span id="fo" style="color: black; font-family: 'Sigmar One', cursive;
               " >FOOD</span>
@@ -116,7 +117,7 @@
             </div>
           </div>
         </div>
-        <div class="column2">
+        <div class="column2 wow bounceInRight" data-wow-duration="1.3s" data-wow-delay="0.8s">
           <div class="table-right" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">
             <div class="pricing-details">
               <span id="ex" style="color: black; font-family: 'Sigmar One', cursive;
