--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,10 +83,10 @@
       <p>We are a team of 4 people serving you to become healthy and happy life. This is a major reason for you to have confidence in yourself.</p>
       <h3>Our Team</h3>
       <ul class="list">
-        <li>ABD ALRAHMAN: CEO</li>
-        <li>AYMAN: CFO</li>
-        <li>MOHAMMAD: Lead Accountant</li>
-        <li>ASHAR: Investment Manager</li>
+        <li>ABDALRAHMAN Alharases</li>
+        <li>AYMAN Alkhawaldeh</li>
+        <li>MOHAMMAD Alhawamdeh</li>
+        <li>ASHAR Aloran</li>
       </ul>
     </div>
     
@@ -122,9 +122,9 @@
               <span id="ex" style="color: black; font-family: 'Sigmar One', cursive;
               ">EXERCISES</span>
               <ul class="columnList">
-                <li>You have to want it, you have to plan for it</li>
-                <li>You don’t get the ass you want by sitting on it</li>
-                <li>You have to do the work yourself</li>
+                <li>Specific plan for your workouts based on machine you pick</li>
+                <li>Browse the data to exactly know what to implement </li>
+                <li>Check your workouts regularly</li>
                 <li>Think of your workouts as important meetings</li>
               </ul>
               <a href="/newExc"  class="btn">Get start</a>
