--- a/views/pages/profile/mymachines.ejs
+++ b/views/pages/profile/mymachines.ejs
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="public/styles/result.css">
+    <link rel="stylesheet" href="public/styles/myProfile.css">
 </head>
 <body>
     <% table.forEach( (val) => { %>
+        <div class="exercise-Section">
         <form action="/update/<%= val.id %>?_method=PUT" method="POST">
             <li> machine name:  </li>
             <input type="text" name="mname" value="<%= val.machine%>">
@@ -16,14 +19,14 @@
             <input type="text" name="catagory" value="<%= val.catagory %>">
             <br>
             <div></div>
-            <img src="<%= val.url? val.url:'https://bitsofco.de/content/images/2018/12/broken-1.png' %>">
+            <img class="machine-pic" src="<%= val.url? val.url:'https://www.gymequip.eu/wp-content/uploads/2015/10/Cable-Crossover-Machine-C2X-1.png' %>">
 
-            <button type="submit" > Update </button>
+            <button class="button" type="submit" > Update </button>
         </form>
         <form action="/delete_mach/<%= val.id %>?_method=DELETE" method="POST"> 
             <button class="button" type="submit"> Delete Machine</button>
         </form>
-
+    </div>
     <% }) %>
 
 </body>
