--- a/views/pages/fitness/show.ejs
+++ b/views/pages/fitness/show.ejs
@@ -7,14 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="public/styles/result.css">
+    <link rel="stylesheet" href="public/styles/myProfile.css">
 </head>
 
 <body>
+    
 <main>
     <!-- <h1>the excercise result </h1> -->
     <% workout.forEach((val) => { %>
 
-    <div>
+    <div class="">
         <form action="/addMachine" name="<%= val.data.id%>" method="POST" class="machine-form-result">
             <ul>
                 <li> machine Name:</li>
@@ -26,11 +28,11 @@
                 <img class="machine-pic" src="<%= val.data.image ? val.data.image: 'https://www.gymequip.eu/wp-content/uploads/2015/10/Cable-Crossover-Machine-C2X-1.png' %>" width="60%"  height="60%" alt="<%= val.data.name %> image" >
                 <!-- <input type="text" name="url" value="<%= val.data.image %>"> -->
             </ul>
-            <button type="submit"  class="button">Add to my Exercises</button>
+            <button type="submit"class="button">Add to my Exercises</button>
         </form>
 
 
-        </div>
+        </div class="">
 
 
 
